; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_hash_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_hash_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.neighbour = type { i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.neighbour**, i32)* @neigh_hash_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @neigh_hash_free(%struct.neighbour** %0, i32 %1) #0 {
  %3 = alloca %struct.neighbour**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.neighbour** %0, %struct.neighbour*** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = zext i32 %6 to i64
  %8 = mul i64 %7, 8
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @PAGE_SIZE, align 8
  %11 = icmp ule i64 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load %struct.neighbour**, %struct.neighbour*** %3, align 8
  %14 = call i32 @kfree(%struct.neighbour** %13)
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.neighbour**, %struct.neighbour*** %3, align 8
  %17 = ptrtoint %struct.neighbour** %16 to i64
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @get_order(i64 %18)
  %20 = call i32 @free_pages(i64 %17, i32 %19)
  br label %21

21:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @kfree(%struct.neighbour**) #1

declare dso_local i32 @free_pages(i64, i32) #1

declare dso_local i32 @get_order(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
